fix: z-index of content display options in Collection preferences whi… (#1083)

--- a/src/collection-preferences/content-display/content-display-option.scss
+++ b/src/collection-preferences/content-display/content-display-option.scss
@@ -40,7 +40,6 @@ $border-radius: awsui.$border-radius-item;
   border-top: awsui.$border-divider-list-width solid awsui.$color-border-divider-default;
   &:not(.placeholder).sorting {
     @include animated;
-    z-index: 1;
   }
   &.placeholder {
     > .content-display-option-content {
